--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "build": "parcel build ./src/index.html",
+    "clean": "rm -rf .cache && rm -rf dist",
+    "postinstall": "npm run clean && npm run build",
+    "start": "node index.js",
     "start:dev": "parcel src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
